--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,15 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/2gyoshi/blog.git"
+  },
+  "bugs": {
+    "url": "https://github.com/2gyoshi/blog/issues"
+  },
+  "homepage": "https://github.com/2gyoshi/blog#readme",
+  "description": ""
 }
